force-app/main/default/objects/FieldTracking__c/FieldTracking__c.object-meta.xml
<CustomObject>
    <description>[공통] Filed 값 Update 시 이력 저장</description>
    <label>Field Tracking</label>
    <nameField>
        <displayFormat>FT-{0000000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>