force-app/main/default/objects/FieldTracking__c/fields/ActivityReport__c.field-meta.xml
<CustomField>
    <fullName>ActivityReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Report</label>
    <referenceTo>ActivityReport__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>FieldTracking</relationshipName>
    <type>Lookup</type>
</CustomField>