force-app/main/default/objects/FieldTracking__c/fields/AfterOperation__c.field-meta.xml
<CustomField>
    <fullName>AfterOperation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>After Operation</label>
    <referenceTo>AfterOperation__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>