force-app/main/default/objects/FieldTracking__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <externalId>true</externalId>
    <label>API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>