force-app/main/default/objects/FieldTracking__c/fields/BusinessPlan__c.field-meta.xml
<CustomField>
    <fullName>BusinessPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BusinessPlan</label>
    <referenceTo>BusinessPlan__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>