force-app/main/default/objects/FieldTracking__c/fields/ChangeDT__c.field-meta.xml
<CustomField>
    <fullName>ChangeDT__c</fullName>
    <label>Changed Date</label>
    <type>DateTime</type>
</CustomField>