force-app/main/default/objects/FieldTracking__c/fields/CJOilPrice__c.field-meta.xml
<CustomField>
    <fullName>CJOilPrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CJ 해피 시세 현황</label>
    <referenceTo>CJOilPrice__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>