force-app/main/default/objects/FieldTracking__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>경쟁사</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>