force-app/main/default/objects/FieldTracking__c/fields/CompetitorPrice__c.field-meta.xml
<CustomField>
    <fullName>CompetitorPrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Price</label>
    <referenceTo>CompetitorPrice__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>FieldTracking</relationshipName>
    <type>Lookup</type>
</CustomField>