force-app/main/default/objects/FieldTracking__c/fields/CRM_Issue__c.field-meta.xml
<CustomField>
    <fullName>CRM_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>이슈 사항</label>
    <referenceTo>CRM_Issue__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>