force-app/main/default/objects/FieldTracking__c/fields/CurrentPartner__c.field-meta.xml
<CustomField>
    <fullName>CurrentPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>현거래처</label>
    <referenceTo>CurrentPartner__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>