force-app/main/default/objects/FieldTracking__c/fields/ExtraService__c.field-meta.xml
<CustomField>
    <fullName>ExtraService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extra Service</label>
    <referenceTo>ExtraService__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>FieldTrackingExtraService</relationshipName>
    <type>Lookup</type>
</CustomField>