force-app/main/default/objects/FieldTracking__c/fields/FieldBriefing__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Briefing</label>
    <referenceTo>FieldBriefing__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>FieldTracking</relationshipName>
    <type>Lookup</type>
</CustomField>