force-app/main/default/objects/FieldTracking__c/fields/fm_User__c.field-meta.xml
<CustomField>
    <fullName>fm_User__c</fullName>
    <formula>User__r.FirstName +  User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dev_변경자</label>
    <type>Text</type>
</CustomField>