force-app/main/default/objects/FieldTracking__c/fields/ITServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>ITServiceRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM 서비스 요청</label>
    <referenceTo>ITServiceRequest__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>