force-app/main/default/objects/FieldTracking__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Field Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>