force-app/main/default/objects/FieldTracking__c/fields/Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>협상</label>
    <referenceTo>Negotiation__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>