force-app/main/default/objects/FieldTracking__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>