force-app/main/default/objects/FieldTracking__c/fields/OilTypeChange__c.field-meta.xml
<CustomField>
    <fullName>OilTypeChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>유류유형 변경</label>
    <referenceTo>OilTypeChange__c</referenceTo>
    <relationshipLabel>변경내역</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>