force-app/main/default/objects/FieldTracking__c/fields/OriginalValue__c.field-meta.xml
<CustomField>
    <fullName>OriginalValue__c</fullName>
    <label>Original Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>