force-app/main/default/objects/FieldTracking__c/fields/PreSales__c.field-meta.xml
<CustomField>
    <fullName>PreSales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Sales</label>
    <referenceTo>PreSales__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>