force-app/main/default/objects/FieldTracking__c/fields/PT__c.field-meta.xml
<CustomField>
    <fullName>PT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PT</label>
    <referenceTo>PT__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>