force-app/main/default/objects/FieldTracking__c/fields/SampleFood__c.field-meta.xml
<CustomField>
    <fullName>SampleFood__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Food</label>
    <referenceTo>SampleFood__c</referenceTo>
    <relationshipLabel>Field Tracking</relationshipLabel>
    <relationshipName>Field_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>